# quantum-circuit-router

./: .gitignore  CMakeLists.txt  Distribute.bat  README.md  build-android.bat  json.hpp  qcrouter.cpp  qcrouter.h  quantum-circuits-router.sln
import-console/: Program.cs  import-console.csproj
import-console/Properties/: AssemblyInfo.cs
libavoid/: aca3.cpp  aca3.h  actioninfo.h  assertions.h  block.cpp  blocks.cpp  box.cpp  box.h  cbuffer.cpp  cc_clustercontainmentconstraints.cpp  cc_clustercontainmentconstraints.h  cc_nonoverlapconstraints.cpp  cc_nonoverlapconstraints.h  cluster.cpp  cluster.h  cola.cpp  cola.h  cola_topology_addon.cpp  cola_topology_addon.h  colafd.cpp  commondefs.h  compound_constraints.cpp  compound_constraints.h  compute_forces.cpp  conjugate_gradient.cpp  connected_components.cpp  connected_components.h  connectionpin.cpp  connectionpin.h  connector.cpp  connector.h  connend.cpp  connend.h  constraint.cpp  constraint.h  convex_hull.cpp  dllexport.h  exceptions.h  geomtypes.cpp  geomtypes.h  (+42 more)
qcrouter/: android.h  qcrouter.vcxproj  qcrouter.vcxproj.filters
qcrouter-win32/: dllmain.cpp  qcrouter-win32.cpp  qcrouter-win32.vcxproj  stdafx.cpp  stdafx.h  targetver.h
